--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <link rel='stylesheet' type='css' href='styles.css'>
   </head>
   <body>
+    <select id="options">
+      <option selected>Select Plot</option>>
+      <option value="_usPop">US Population graph</option>
+      <option value="_bitcoin">Bitcoin transaction chart</option>
+    </select>
     <div class="graph">
-
     </div>
     <script src="d3.js" charset="utf-8"></script>
     <script src='dataSets.js'></script>
