audio in its own file

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="d3.js" charset="utf-8"></script>
     <script src='dataSets.js'></script>
     <script src='graphs.js'></script>
+    <script src='audioViz.js'></script>
   </body>
 </html>
