US Pop, Bitcoin, and Audio working

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <option selected>Select Plot</option>>
       <option value="_usPop">US Population graph</option>
       <option value="_bitcoin">Bitcoin transaction chart</option>
+      <option value="audioViz">Audio Visualizer</option>
     </select>
     <div class="graph">
     </div>
